--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -131,7 +131,7 @@ nav ul {
 nav li {
     font-family: 'Work Sans';
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 400; 
 }
 
 nav li:hover {
@@ -150,16 +150,12 @@ nav li:active {
     list-style: none;
     outline: none;
     text-decoration: none;
-    font-weight: 400; /* Défaut */
-    transition: font-weight 0.2s ease-in-out; /* Animation fluide */
+    font-weight: 400; 
 }
 
-
-#login-button.active {
+#login-button:hover {
     font-weight: 700;
 }
-
-
 
 .instagram{
     font-size: 22px;
@@ -220,21 +216,26 @@ nav li:active {
 
 /* Boutons de modification */
 .buttonModife {
-    display: flex;
-    align-items: center;
+    display: flex; 
     justify-content: center;
-    gap: 20px;
-    margin: 100px 0 50px;
+    gap: 25px;
+    margin: 100px 0 50px 120px;
 }
 
 .buttonModife button {
-    font-size: 16px;
+	font-family: 'Work Sans';
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 16.42px; 
     background: transparent;
     border: none;
 }
 
 .buttonModife i {
+
+	margin-right:10px;
     color: black;
+	font-weight: 400;
     font-size: 16px;
 }
 
@@ -271,7 +272,7 @@ nav li:active {
     width: 950px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 18px 15px;
+    gap: 15px 18px;
     margin-top: 40px;
 }
 
@@ -282,6 +283,7 @@ nav li:active {
 .gallery figcaption {
     font-family: 'Work Sans', sans-serif;
     font-size: 13px;
+	margin-top : 4px;
     color: black;
 }
 
@@ -372,9 +374,7 @@ footer nav ul {
 .navFooter {
     margin: 7px 97px;
     font-size: 14px;
-    font-weight: 300;
-    text-align: end;
-    color: #333;
+	cursor:default;
 }
 
 
@@ -469,7 +469,7 @@ footer nav ul {
 .editionMode {
     width: 100%;
     background: black;
-    padding: 20px;
+    padding: 20px 0;
     position: fixed;
     top: 0;
     left: 0;
@@ -480,7 +480,7 @@ footer nav ul {
 }
 
 .editionMode span {
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Work Sans';
     font-size: 16px;
     font-weight: 400;
     color: white;
