--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -325,6 +325,7 @@ nav li:active {
 	box-sizing: border-box;
 	padding: 10px;
     border: none;
+    outline: none;
     box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
@@ -485,6 +486,7 @@ footer nav ul {
     font-weight: 400;
     color: white;
     background: transparent;
+    cursor:default; 
 }
 
 .editionMode i {
